# ChangeLog for dev-python/django
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/django/ChangeLog,v 1.127 2014/04/28 04:38:42 idella4 Exp $

  28 Apr 2014; Ian Delaney <idella4@gentoo.org> -django-1.4.8.ebuild:
  remove -1.4.8 wrt bug #508514

  27 Apr 2014; Agostino Sarubbo <ago@gentoo.org> django-1.4.11.ebuild:
  Stable for x86, wrt bug #508514

  26 Apr 2014; Agostino Sarubbo <ago@gentoo.org> django-1.4.11.ebuild:
  Stable for amd64, wrt bug #508514

  26 Apr 2014; Ian Delaney <idella4@gentoo.org> django-1.5.6.ebuild,
  django-1.6.3.ebuild:
  On further testing, adding py3.4 support

  25 Apr 2014; Ian Delaney <idella4@gentoo.org> django-1.5.6.ebuild:
  re-intro py3.2 to test phase

*django-1.4.11 (25 Apr 2014)
*django-1.6.3 (25 Apr 2014)
*django-1.5.6 (25 Apr 2014)

  25 Apr 2014; Ian Delaney <idella4@gentoo.org> +django-1.4.11.ebuild,
  +django-1.5.6.ebuild, +django-1.6.3.ebuild, django-1.6.1.ebuild:
  bumps wrt to Bug #508514

*django-1.6.1 (17 Jan 2014)

  17 Jan 2014; Ian Delaney <idella4@gentoo.org> +django-1.6.1.ebuild,
  +files/django-1.6-objects.patch:
  bump; re-base of objects.patch, fix testsuite with sed statement, thanks to
  Arfrever, fixes Bug #491318

  03 Dec 2013; Chris Reffett <creffett@gentoo.org> -django-1.4.5.ebuild,
  -django-1.5.1.ebuild:
  Cleanup wrt bug 489214

  22 Oct 2013; Fabian Groffen <grobian@gentoo.org> django-1.5.4.ebuild:
  Marked ~x64-macos, bug #487670

  21 Sep 2013; Agostino Sarubbo <ago@gentoo.org> django-1.4.8.ebuild:
  Stable for x86, wrt bug #484984

  21 Sep 2013; Agostino Sarubbo <ago@gentoo.org> django-1.4.8.ebuild:
  Stable for amd64, wrt bug #484984

  16 Sep 2013; Dirkjan Ochtman <djc@gentoo.org> -django-1.2.7.ebuild,
  -django-1.3.7.ebuild:
  Remove old, vulnerable django versions.

*django-1.5.4 (15 Sep 2013)

  15 Sep 2013; Dirkjan Ochtman <djc@gentoo.org> +django-1.5.4.ebuild,
  +files/django-1.5.4-objects.patch: