@@ -7,22 +7,18 @@ AUX django-1.5-py3tests.patch 959 SHA256 62fbb00c8d919306b48c8fcc82c7fa5e8aa3858
 AUX django-1.5.4-objects.patch 1467 SHA256 237d0ee4e9f2af1d98b0b230977a41d061cbdbefc153193bc1539c4ad82622ee SHA512 09bdaab452f692679a15d0fbadf3c044417aeda0ce65b30bd2994d86b33ae93c13eb159fdad373a031ab2e0563861e29d1f9935b52c33af34a6afd25461e904d WHIRLPOOL d8a18947bd826c28836ce5180a6f9de758722fcc45ba11ca6a887c65711e7fa23827dcab734b6bfe51c330dd05a2d67a5d82e6e2d85130cdb05fcb4ca0622f26
 AUX django-1.6-objects.patch 729 SHA256 ea217c069a28b19063fcf216433cab48bd693fa51db0585881905532575a0875 SHA512 e7dc3cc8e50b4b0d546983dd79f1fa2bf7680d04d1e401267334ce72ee065e0fac2b00f9287ccafc3fabca29bca4c1d6475021b5da19d145a2d90fd491bb7ae7 WHIRLPOOL 00b4f579809206c78ce1648059c56a3af146c883c1b36f4febede15b4d3075a3686b30a6feac8d03c1df5e45994da5a2fdece6bdb71afb8d16bb72e139d67931
 DIST Django-1.4.11.tar.gz 7752172 SHA256 4819d8b37405b33f4f0d156f60918094d566249f52137c5e6e0dbaa12995c201 SHA512 60cc3c769a9b21e93e6c4e79132ab8f4a48df1cb1c55faaa547c5fd28b9785ddca3b5393790bf96a4715d9b708c6da376ef4a28ec14849147d63f0fe40d386cb WHIRLPOOL 5db11c57bbfafafd9484b8674412b32cfb3531b11b5f51e7b73a313c24473b182b014ba2ab193373c1796bcefc38c85580dcda05f2aab32463db4af78afd232a
-DIST Django-1.5.4.tar.gz 8050758 SHA256 428defe3fd515dfc8613039bb0a80622a13fb4b988c5be48db07ec098ea1704e SHA512 daa4b5f8189446feefc168fd618a7cb2bea710b83066e0ec740f7596988107b5da45f2150fc99efd2095356bf87f2c0750d486e8c9b006b6d61468de8fbef748 WHIRLPOOL fe78575bb8b717261cb588deddc80534d70f8d147e807ad6364eaa5d2e785cd076c19be22c54ef602ee4e37d82ee54150788ea8237b19bf48b0b0e3bab3b5eb5
 DIST Django-1.5.6.tar.gz 8068359 SHA256 9b7fcb99d20289189ec0f1e06d1d2bed3b4772e3a393fddbfb006ea7c3f9bfaf SHA512 df266732742e4ff50d362aec870e9ca08213ede80894ddd297d1fee2141ba44b728e8acb4869cb3b50a06517fb04ae66d30e57deaf7e1426e886a5e094b41741 WHIRLPOOL 0f392d9ddf9ae0e3c503b7519e4f626931ba41f4d40f8def7df401e57c53c3c11ebf45ea334183d6c9d5cc400a9bf23cd514620ec1da46beab9c7b57d86f7e4c
-DIST Django-1.6.1.tar.gz 6608178 SHA256 cf011874f54a16e7452e0fe1e7f4ec144b95b47ecf31766c9f1f8cf438f09c06 SHA512 49a1b0582b8b55638d47447a688c38e6c9e709b89cdcdd001995e156298f7f5dc26b847f11f9551ad668bf0225ac98f570a027091ed386db0e566f6e5c564bfe WHIRLPOOL 64061cb87fb059a5800ef1618972c12dca434be6c715417a43a74f85ebbd6a9d2a9f0e8049b92628a3f601213a1680fe30804433f1569edb2c52a9bed0072b34
 DIST Django-1.6.3.tar.gz 6628812 SHA256 6d9d3c468f9a09470d00e85fe492ba35edfc72cee7fb65ad0281010eba58b8f1 SHA512 3b5167df5aa1d2eacf5ff1d989e6304f8f86f71d69aa9aff93d4f1b3b8459d1bec0691cc49007c4e20e700f86849b95affd2dee212fd46a6a4732c2b540f568c WHIRLPOOL 1e740899757544fe64458be6815da538bb59a96f7cc8dbd60965cf1676b14586cb769db5f1db7b1e80d054ffae85825856f62265b4d1c0e49f6c1940adbea224
 EBUILD django-1.4.11.ebuild 2567 SHA256 7107e6435f530c645dafd88b214663e2cc06e2df3f798cd80bab1247aa267040 SHA512 74d24ecee37240a9fbc96db98c3cb4d5f036a076d3383bfc832a0c728caeb9c383d77cf7e22d2e4e50d54d40995542cc1c46aaecbcc30cda58fb6bce0a4e817c WHIRLPOOL f655b32e25155cef3d73a813a5f95de693092bcb69de1108b2e41c315ba38a14e2d653a0e8fa628425e5e21fb1d6c1454d3a2c5688d663a03eef96403797e6d0
-EBUILD django-1.5.4.ebuild 2391 SHA256 0e1e520adc04c15d291517d5688ae8c8ff87d2172426399182dd690499196ef7 SHA512 d8745436b9f62093b01489c9182db79cc364b127134f5d7da7071ceb07030c68fcbda462d52ec93da2710a2592e105af54411217e1d968d0c3b0b4b8987a4ecd WHIRLPOOL d50713b3c8a5caa4ac10ee87e6ecef78fc2a6a1f2cdcd7b8afde6b13d501a74dba866c3def43283c72cd4789ea1094e58869af48e47d953e4058442444942905
 EBUILD django-1.5.6.ebuild 2456 SHA256 6bc5017cd0fa4f6e0d4e6897d384ceadb1b3335dbee975183225d2e47ad9953c SHA512 104e7973ede62bd86022525d0c2fcbdf47e0fffaa23aa0303fae0a1f1d3408ebdd5328c1c94811331b385c5bc7ac3511a5f37559dde6be3c4d1967b5a093c5e6 WHIRLPOOL 4e62f03b4e851808bf74bb3d8d17affd928fe99061fc4156b353a355418c62d3678742f34d8714fd9d6be8317027d7caa2cfd618b7287911b493802759753ab3
-EBUILD django-1.6.1.ebuild 2780 SHA256 0f9e4dfaed637b13ef0be0485578920638044e2bbdb68b3039ec9710940ea1b9 SHA512 fbca2ceb5aca326d8c5dccb1b7c7a9175457f09b0a9b00d606a93c65301284092739ad1de6e1daa41309910917ff83cc8b5033b10c956074ed6275b1e129cdb0 WHIRLPOOL 685c14595207d2a17ad2d5b501be6a15dfc02b053ebc5e64972039d95a6297489c16929802a44c9fb07bbd4e2fab4e220119d4fbc9144748863e8f2e1d4cc0d3
 EBUILD django-1.6.3.ebuild 2825 SHA256 75be77e0affe902d5f8b3fc334f3293252785626c41f5e678d1bdbdd8d9516a3 SHA512 3039521ce2b5cfff563186136d43f2a6d316fec6d1a7a5eacf6c55687dc045daedc18b12532767a8c0bf18368ff291521d4950cb142895ee2dcafdc43b49b219 WHIRLPOOL a082a3a58638525c7db7a5d196775b4d9826fd059c69132886c9de7b5ba7fdaaea73709ccd7fe26a0ab1cb5927625bc2644b1fd5cb2dd4f2098c2dd1f8aac6ac
 EBUILD django-9999.ebuild 2378 SHA256 7bab217e56b3cbafc16f45b32462afc0ad791658c123df2100e2336622332fcc SHA512 bc2a6a3217627133b74115c02f93eaf71b250f410f39f433baf86da74dd45bc7c8b191b10fa40ef299f1f9a98f0a12f223953c6050321f246052a2ce90cf588f WHIRLPOOL fecb6f73ff804f70c468ffa79d64f12aa5960c171f61be323bbf0a5cfde35c042752bf8e61c3af1b1a50ab64002c675120381f4412a3fb37d0861efa1d14dd43
-MISC ChangeLog 19565 SHA256 944e9332cb69cfd868de3c50c4766175e78869ddd85e87df4e5465ca3c9b7820 SHA512 2cb5124e40c236a858bea7af5ff62651e59d3571063216e62c32ab2d0530dd91657d8ad9cadb5858dff50f78f28fa5e883f9961167848ef7399a2957e4ab0ddc WHIRLPOOL 5e023de39f63ad77eb607157b175d1840368e4c1b24f488815a8142f7a1175c34435d0f29496502349cb7d919703f682c112411ec33f152e262962b86413ca7e
+MISC ChangeLog 19686 SHA256 8fd18005646421059faca207ca476ccf81b26f2ec6fd994e21c6f0b9b31a7a49 SHA512 2b23c19b10b4295659498414bddab342b08ab162b72309de50a53fc8ed6af65496cc9c8a6be68e89ad3fe4b7689dc046bc5aeac6200da949e173e74302b43a21 WHIRLPOOL 71ab5244dfad6f9a9c6e5371ba497b81a496607b1244aeaaf0e3ea0dad6e8bb3b22aa924022f6640f9368c71c541f1893f448460c26157c517e5f448a3e7e242
 MISC metadata.xml 160 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a SHA512 7c02a1de1ddcb6b7c6378cceff0458da3a15d5381417f7cdf01874e7c372664b8899863f41b3a2fd8d6ad67ceb732dac6da0cc17575bf8e3e6d89480417c6628 WHIRLPOOL ed2795e4466eda8c804d5067c87386e269a59fe959393057ca5ddc36851e00f5210c4da1adf4bbdfdbb7d1d3d5c60aced25727ca12fdc8305d9e263a3aca9b13
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlNd2ZkACgkQso7CE7gHKw1d6QCgi82C0EldoHklnprygqc1Vdq7
-6GEAoIU3gzeXBc0/2lkPfT5/NxupIj73
-=XatR
+iEYEAREIAAYFAlNjhJMACgkQso7CE7gHKw2e4gCfZ/ib3+i0jG2lNEfkKUaeOqze
+GNkAnjWFHdsYWjqeCZevIF6tsjDVS3HO
+=dslQ
 -----END PGP SIGNATURE-----
