@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/django
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/django/ChangeLog,v 1.127 2014/04/28 04:38:42 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/django/ChangeLog,v 1.128 2014/05/02 11:49:29 idella4 Exp $
+
+  02 May 2014; Ian Delaney <idella4@gentoo.org> -django-1.5.4.ebuild,
+  -django-1.6.1.ebuild:
+  cleanout wrt Bug 508514
 
   28 Apr 2014; Ian Delaney <idella4@gentoo.org> -django-1.4.8.ebuild:
   remove -1.4.8 wrt bug #508514
